<resources>
    <string name="app_name">Grammar</string>
    <string name="select_a_tense">Select a Tense</string>
    <string name="present_tense">Present Tense</string>
    <string name="past_tense">Past Tense</string>
    <string name="future_tense">Future Tense</string>
    <string name="nouns">Nouns</string>
    <string name="title_activity_navbar">navbar</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="grammar_content">Grammar Content</string>
    <string name="information">Information</string>
    <string name="lsr_letter_sound_relationship">LSR-Letter Sound Relationship</string>
    <string name="parts_of_speech">Parts of Speech</string>
    <string name="the_article">The Article</string>
    <string name="tense">Tense</string>
    <string name="tense_introduction">Tense Introduction</string>
    <string name="tense_table">Tense Table</string>
    <string name="present_tense_content"><![CDATA[
        <h1>Present Tense</h1>
        Present Tense indicates an action that is happening right now.<br><br>
        <b>Types:</b><br>
        1. <b>Present Indefinite:</b> Subject + V1(s/es) + Object.<br>
        Ex: He writes a letter.<br>
        2. <b>Present Continuous:</b> Subject + is/am/are + V(ing) + Object.<br>
        Ex: He is writing a letter.<br>
        3. <b>Present Perfect:</b> Subject + has/have + V3 + Object.<br>
        Ex: He has written a letter.<br>
        4. <b>Present Perfect Continuous:</b> Subject + has/have + been + V(ing) + since/for + Time.<br>
        Ex: He has been writing a letter for two hours.
    ]]></string>
    <string name="past_tense_content"><![CDATA[
        <h1>Past Tense</h1>
        Past Tense indicates an action that has already happened.<br><br>
        <b>Types:</b><br>
        1. <b>Past Indefinite:</b> Subject + V2 + Object.<br>
        Ex: He wrote a letter.<br>
        2. <b>Past Continuous:</b> Subject + was/were + V(ing) + Object.<br>
        Ex: He was writing a letter.<br>
        3. <b>Past Perfect:</b> Subject + had + V3 + Object.<br>
        Ex: He had written a letter.<br>
        4. <b>Past Perfect Continuous:</b> Subject + had + been + V(ing) + since/for + Time.<br>
        Ex: He had been writing a letter since morning.
    ]]></string>
    <string name="future_tense_content"><![CDATA[
        <h1>Future Tense</h1>
        Future Tense indicates an action that will happen.<br><br>
        <b>Types:</b><br>
        1. <b>Future Indefinite:</b> Subject + will + V1 + Object.<br>
        Ex: He will write a letter.<br>
        2. <b>Future Continuous:</b> Subject + will be + V(ing) + Object.<br>
        Ex: He will be writing a letter.<br>
        3. <b>Future Perfect:</b> Subject + will have + V3 + Object.<br>
        Ex: He will have written a letter.<br>
        4. <b>Future Perfect Continuous:</b> Subject + will have been + V(ing) + since/for + Time.<br>
        Ex: He will have been writing a letter for two hours.
    ]]></string>
    <string name="tense_table_content"><![CDATA[

        <table border="1" style="width:100%; border-collapse: collapse; text-align: center;">
            <tr style="background-color: #f2f2f2;">
                <th>Tense</th>
                <th>Indefinite (V1/V2)</th>
                <th>Continuous (ing)</th>
                <th>Perfect (V3)</th>
                <th>Perf. Cont. (ing)</th>
            </tr>
            <tr>
                <td><b>Present</b></td>
                <td>do/does + V1</td>
                <td>is/am/are</td>
                <td>has/have</td>
                <td>has/have been</td>
            </tr>
            <tr>
                <td><b>Past</b></td>
                <td>did + V1 (Aff: V2)</td>
                <td>was/were</td>
                <td>had</td>
                <td>had been</td>
            </tr>
            <tr>
                <td><b>Future</b></td>
                <td>will + V1</td>
                <td>will be</td>
                <td>will have</td>
                <td>will have been</td>
            </tr>
        </table>
    ]]></string>
    <string name="double_parts_of_speech">Double parts of speech</string>
    <string name="voice">Voice</string>
    <string name="the_preposition">The Preposition</string>
    <string name="sentence">Sentence</string>
    <string name="uses_of_some_special_words">Uses of some special words</string>
    <string name="master_grammar">Master English Grammar</string>
    <string name="writer_name">Written by Kalka Prasad Rajpoot</string>
    <string name="creator_name">App created by Lexical software</string>
    <string name="copyright_notice">© Copyright 2020-%1$d</string>
</resources>