<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="Grammar Guide"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">



            <!-- Buttons List -->
            <Button style="@style/RectButtonStyle" android:textColor="@color/white" android:id="@+id/btnLsr" android:text="@string/lsr_letter_sound_relationship" />
            <Button style="@style/RectButtonStyle" android:textColor="@color/white" android:id="@+id/btnPartsOfSpeech" android:text="@string/parts_of_speech" />
            <Button style="@style/RectButtonStyle" android:textColor="@color/white" android:id="@+id/btnArticle" android:text="@string/the_article" />
            <Button style="@style/RectButtonStyle" android:textColor="@color/white" android:id="@+id/btnTense" android:text="@string/tense" />
            <Button style="@style/RectButtonStyle" android:textColor="@color/white" android:id="@+id/btnDoubleParts" android:text="@string/double_parts_of_speech" />
            <Button style="@style/RectButtonStyle" android:textColor="@color/white" android:id="@+id/btnVoice" android:text="@string/voice" />
            <Button style="@style/RectButtonStyle" android:textColor="@color/white" android:id="@+id/btnPreposition" android:text="@string/the_preposition" />
            <Button style="@style/RectButtonStyle" android:textColor="@color/white" android:id="@+id/btnSentence" android:text="@string/sentence" />
            <Button style="@style/RectButtonStyle" android:textColor="@color/white" android:id="@+id/btnSpecialWords" android:text="@string/uses_of_some_special_words" />

            <TextView
                android:id="@+id/tvCopyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:textColor="#1A1A1A"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
